tests/semantic/fail/record-wrong-fields-4.tiger
let
      type vector = {x : int, y : int}
      var x := vector {y = 1, x = "1"}
in
end
